--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,14 +10,14 @@ $panGreen: #30B08F;
 
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#409EFF;
+$menuActiveText:#C71585;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg:#FF69B4;
+$menuHover:#C71585;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg:#C71585;
+$subMenuHover:#C71585;
 
 $sideBarWidth: 210px;
 
